--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 12:49:00 PM</p>
+    <p class="lastupdate">09/13/2020 12:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">83.3&#176;F</td>
+        <td class="data">83.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">83.3&#176;F</td>
+        <td class="data">83.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">83.3&#176;F</td>
+        <td class="data">83.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.8&#176;F</td>
+        <td class="data">44.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">26%</td>
+        <td class="data">25%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.873 inHg (-0.053)</td>
+        <td class="data">29.872 inHg (-0.055)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph ENE (68&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:48:08 PM">
-            83.3</span><br/>
+          <span title="12:53:56 PM">
+            83.9</span><br/>
           <span title="07:29:11 AM">
             48.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:48:08 PM (Sunday)">
-            83.3</span><br/>
+          <span title="12:53:56 PM (Sunday)">
+            83.9</span><br/>
           <span title="07:29:11 AM (Sunday)">
             48.7</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:48:08 PM" class="hival">
-            83.3</span>
+          <span title="12:53:56 PM" class="hival">
+            83.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:48:08 PM (Sunday)" class="hival">
-            83.3</span>
+          <span title="12:53:56 PM (Sunday)" class="hival">
+            83.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:09:59 AM">
             74</span><br/>
-          <span title="12:43:07 PM">
-            25</span>
+          <span title="12:51:40 PM">
+            24</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:09:59 AM (Sunday)">
             74</span><br/>
-          <span title="12:43:07 PM (Sunday)">
-            25</span>
+          <span title="12:51:40 PM (Sunday)">
+            24</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 22 hours, 2 minutes</td>
+      <td class="data">11 days, 22 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 22 hours, 2 minutes</td>
+      <td class="data">11 days, 22 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
