--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 01:09:00 PM</p>
+    <p class="lastupdate">09/13/2020 01:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">85.7&#176;F</td>
+        <td class="data">86.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">85.7&#176;F</td>
+        <td class="data">86.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">85.7&#176;F</td>
+        <td class="data">86.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">43.6&#176;F</td>
+        <td class="data">43.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.867 inHg (-0.062)</td>
+        <td class="data">29.864 inHg (-0.062)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph E (90&#176;)</td>
+        <td class="data">1 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:08:38 PM">
-            85.8</span><br/>
+          <span title="01:13:24 PM">
+            86.0</span><br/>
           <span title="07:29:11 AM">
             48.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:08:38 PM (Sunday)">
-            85.8</span><br/>
+          <span title="01:13:24 PM (Sunday)">
+            86.0</span><br/>
           <span title="07:29:11 AM (Sunday)">
             48.7</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:08:38 PM" class="hival">
-            85.8</span>
+          <span title="01:13:24 PM" class="hival">
+            86.0</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:08:38 PM (Sunday)" class="hival">
-            85.8</span>
+          <span title="01:13:24 PM (Sunday)" class="hival">
+            86.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:09:59 AM">
             74</span><br/>
-          <span title="01:02:46 PM">
-            23</span>
+          <span title="01:10:28 PM">
+            22</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:09:59 AM (Sunday)">
             74</span><br/>
-          <span title="01:02:46 PM (Sunday)">
-            23</span>
+          <span title="01:10:28 PM (Sunday)">
+            22</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:49:01 AM">
             29.930</span><br/>
-          <span title="03:40:01 AM">
-            29.865</span>
+          <span title="01:11:02 PM">
+            29.861</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:49:01 AM (Sunday)">
             29.930</span><br/>
-          <span title="03:40:01 AM (Sunday)">
-            29.865</span>
+          <span title="01:11:02 PM (Sunday)">
+            29.861</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          164
+          163
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          164
+          163
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 22 hours, 22 minutes</td>
+      <td class="data">11 days, 22 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 22 hours, 22 minutes</td>
+      <td class="data">11 days, 22 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
